# email-agent

./: .gitignore  README.md  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
backend/app/: main.py
backend/app/agent/: builder.py  config.py  graph.py  state.py
backend/app/agent/llms/: anthropic_llm.py  (+6 more)
backend/app/api/: router.py
backend/tests/: conftest.py  test_api.py  test_builder.py  test_llms.py  test_nodes.py
dataset/: test.csv  test_gepa.csv  train.csv  train_gepa.csv
deep_evaluation/: README.md  __init__.py  config.py  data_loader.py  evaluate_classifier.py  evaluate_judge.py  metrics.py  run_evaluation.py
deep_evaluation/outputs/2026-06-25_21-18-34/: classifier.csv  overall.csv
deep_evaluation/outputs/2026-06-25_21-20-36/: judge.csv  overall.csv
deep_evaluation/outputs/2026-06-25_21-27-48/: classifier.csv  judge.csv  overall.csv
deep_evaluation/outputs/2026-06-25_21-35-52/: classifier.csv  overall.csv
deep_evaluation/outputs/2026-06-25_21-52-11/: judge.csv  overall.csv
frontend/: index.html
frontend/src/: App.jsx  index.css
gepa_training_judge/: optimize_prompt.py  optimized_prompt.md
gepa_training_judge/runs/20260625_181323/: best.md  prompt_001.md
gepa_training_judge/runs/20260625_181825/: best.json  prompt_002.md  prompt_003.md  prompt_004.md
gepa_training_judge/runs/20260625_181859/: prompt_002.md  prompt_003.md  prompt_004.md  prompt_005.md
gepa_training_judge/runs/20260625_182231/: prompt_002.md  prompt_003.md  prompt_004.md  prompt_005.md
(+17 files in other folders)
