[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langfuse>=4.12.0",
    "langgraph>=1.2.6",
    "nest-asyncio>=1.6.0",
    "uvicorn>=0.49.0",
]
