[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.0.7",
    "dotenv>=0.9.9",
    "dspy>=3.2.1",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langfuse>=4.12.0",
    "langgraph>=1.2.6",
    "nest-asyncio>=1.6.0",
    "openai>=2.44.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
]
